<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Last time update: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Price:</string>
    <string name="min_price_label">Daily minimum price:</string>
    <string name="max_price_label">Daily maximum price:</string>
    <string name="last_market_label">Last trade:</string>
    <string name="last_updated_label">Updated:</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Massa ultricies mi quis hendrerit dolor. Blandit cursus risus at ultrices mi tempus.
        Nec feugiat nisl pretium fusce id velit. Felis eget nunc lobortis mattis aliquam faucibus
        purus in massa. Egestas purus viverra accumsan in nisl nisi scelerisque eu. Molestie at
        elementum eu facilisis sed odio morbi. Augue ut lectus arcu bibendum. Sed vulputate odio
        ut enim blandit. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Sit amet massa
        vitae tortor condimentum lacinia quis. Mattis nunc sed blandit libero volutpat sed.</string>
    <string name="all_time_ago_moment">a moment ago</string>
    <string name="all_time_ago_seconds">%1$d seconds ago</string>
    <string name="all_time_ago_minutes">%1$d minutes ago</string>
    <string name="all_time_ago_hours">%1$d hours ago</string>
    <string name="all_time_ago_days">%1$d days ago</string>
    <string name="fragment_article_read_more_button">read more</string>
    <string name="bottom_navigation_rate_item">Rates</string>
    <string name="bottom_navigation_news_item">News</string>
    <string name="bottom_navigation_settings_item">Settings</string>
</resources>
