<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.HomeActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="@dimen/size_coin_icon_image"
        android:layout_height="@dimen/size_coin_icon_image"
        android:layout_margin="@dimen/margin_all_general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/font_all_large"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_general"
        android:padding="@dimen/padding_all_general_small"
        android:text="@string/slash"
        android:textSize="@dimen/font_all_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_all_large"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        style="@style/CardViewItem"
        android:layout_marginStart="@dimen/margin_all_general_tiny"
        android:layout_marginTop="@dimen/margin_all_general_extra_tiny"
        android:layout_marginEnd="@dimen/margin_all_general_tiny"
        android:layout_marginBottom="@dimen/margin_all_general_extra_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_all_general_small"
            android:paddingBottom="@dimen/padding_all_general_small">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_all_general_small"
                android:paddingEnd="@dimen/padding_all_general_small"
                android:text="@string/price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_general_small"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7352.5" />

            <View
                style="@style/Separator.DetailCurrency"
                android:background="@color/gray_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all_general"
                android:paddingStart="@dimen/padding_all_general_small"
                android:paddingEnd="@dimen/padding_all_general_small"
                android:text="@string/min_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_general_small"
                android:layout_marginTop="@dimen/margin_all_general"
                android:textColor="@color/red"
                app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                tools:text="7110.0" />

            <View
                style="@style/Separator.DetailCurrency"
                android:background="@color/gray_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all_general"
                android:paddingStart="@dimen/padding_all_general_small"
                android:paddingEnd="@dimen/padding_all_general_small"
                android:text="@string/max_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_general_small"
                android:layout_marginTop="@dimen/margin_all_general"
                android:textColor="@color/green"
                app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"
                tools:text="7820.1" />

            <View
                style="@style/Separator.DetailCurrency"
                android:background="@color/gray_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all_general"
                android:paddingStart="@dimen/padding_all_general_small"
                android:paddingEnd="@dimen/padding_all_general_small"
                android:text="@string/last_market_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_general_small"
                android:layout_marginTop="@dimen/margin_all_general"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"
                tools:text="Bitfinex" />

            <View
                style="@style/Separator.DetailCurrency"
                android:background="@color/gray_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all_general"
                android:paddingStart="@dimen/margin_all_general_small"
                android:paddingEnd="@dimen/margin_all_general_small"
                android:text="@string/last_updated_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_general_small"
                android:layout_marginTop="@dimen/margin_all_general"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarket"
                tools:text="21:05:16" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>